log
Sat 10 Sep 2022 12:37:54 AM UTC: 
 tests:  0|6
total_score: 0/70
427dfc3
Sat 10 Sep 2022 12:46:34 AM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
82fb345
Sat 10 Sep 2022 12:48:00 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|6
total_score: 0/70
3bf980a
Sat 10 Sep 2022 12:48:33 AM UTC: 
 hashmap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|0
aef53bb
Sat 10 Sep 2022 12:50:47 AM UTC: 
 hashmap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:1: error: unknown type name ‘Map’
   55 | Map * new = (Map *)malloc(sizeof(Map));
      | ^~~
hashmap.c:55:14: error: ‘Map’ undeclared (first use in this function)
   55 | Map * new = (Map *)malloc(sizeof(Map));
      |              ^~~
hashmap.c:55:14: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:55:19: error: expected expression before ‘)’ token
   55 | Map * new = (Map *)malloc(sizeof(Map));
      |                   ^
hashmap.c:56:5: error: implicit declaration of function ‘assert’ [-Werror=implicit-function-declaration]
   56 |     assert(new != NULL); // No hay memoria para reservar la Mapa.
      |     ^~~~~~
hashmap.c:7:1: note: ‘assert’ is defined in header ‘<assert.h>’; did you forget to ‘#include <assert.h>’?
    6 | #include "hashmap.h"
  +++ |+#include <assert.h>
    7 | 
hashmap.c:57:8: error: request for member ‘head’ in something not a structure or union
   57 |     new->head = new->tail = new->current = NULL;
      |        ^~
hashmap.c:57:20: error: request for member ‘tail’ in something not a structure or union
   57 |     new->head = new->tail = new->current = NULL;
      |                    ^~
hashmap.c:57:32: error: request for member ‘current’ in something not a structure or union
   57 |     new->head = new->tail = new->current = NULL;
      |                                ^~
hashmap.c:58:8: error: request for member ‘is_equal’ in something not a structure or union
   58 |     new->is_equal = is_equal;
      |        ^~
hashmap.c:59:8: error: request for member ‘lower_than’ in something not a structure or union
   59 |     new->lower_than = NULL;
      |        ^~
hashmap.c:60:12: error: returning ‘int *’ from a function with incompatible return type ‘HashMap *’ {aka ‘struct HashMap *’} [-Werror=incompatible-pointer-types]
   60 |     return new;
      |            ^~~
cc1: all warnings being treated as errors
Compilation failed
7929e25
